finishing the project regarding layout and microtransitions

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <body>
     
     <section class="portfolio">
-        <div class="portfolio__container">
+        <div class="portfolio__container custom-container">
             <div class="portfolio__container-title">
-                <h1 style="font-size: 88px; letter-spacing: -4px; text-transform: uppercase; ">Get to Know more about my work</h1>
+                <h1>Get to Know more about my work</h1>
             </div>
             <div class="portfolio__container-projects">
                 <div class="project__first">
+                  <a href="https://healthuikit.com/">
                     <div class="project__first-image">
-                        
+                        <div class="layer"></div>
                     </div>
+                  </a>   
                     <div class="project__first-details">
                         <div class="project__first-details-label">
                             <div>HTML</div>
@@ -30,8 +32,8 @@
                             <h3>Landing Page</h3>
                         </div>
                         <div class="project__first-details-links">
-                            <a href="#">See source code</a>
-                            <a href="#">View live site</a>
+                            <a href="https://github.com/brunogleite/Health-UI-landing-page">See source code</a>
+                            <a href="https://healthuikit.com/">View live site</a>
                         </div>
                     </div>
                 </div>
@@ -48,8 +50,8 @@
                             <h3>Ecommerce Product Page</h3>
                         </div>
                         <div class="project__second-details-links">
-                            <a href="#">See source code</a>
-                            <a href="#">View live site</a>
+                            <a href="">See source code</a>
+                            <a href="">View live site</a>
                         </div>
                     </div>
                 </div>
@@ -72,6 +74,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="portfolio__container-social">
+                <div class="bar bar-left"></div>
+                <div class="bar-social">
+                    <a href="https://github.com/brunogleite" class="github"></a>
+                    <a href="https://www.linkedin.com/in/brunogleite/" class="linkedin"></a>
+                    <a href="https://twitter.com/BrunoUiux" class="twitter"></a>
+                </div>
+                <div class="bar bar-right"></div>
             </div>
         </div>
     </section>
