updates with new  projects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="style/main.css">
     <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900"
         rel="stylesheet" />
 </head>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="project__second">
-                    <a href="https://heuristic-poincare-ca55e0.netlify.app/">
+                    <a href="https://movie-app-reactjs-chakra-ui.vercel.app/">
                         <div class="project__second-image project__second-image-ecommerce">
                             <div class="layer active"></div>
                             <p>Watch live site</p>
@@ -53,7 +53,7 @@
                     </a>
                     <div class="project__second-details">
                         <div class="project__second-details-label">
-                            <div>TailwindCSS</div>
+                            <div>ChakraUI</div>
                             <div>ReactJS</div>
                         </div>
                         <div class="project__second-details-title">
@@ -68,22 +68,24 @@
                     </div>
                 </div>
                 <div class="project__third">
-                    <a href="https://priceless-kalam-9fdfd2.netlify.app/">
+                    <a href="https://product-feedback-react-js-chakra-ui.vercel.app/">
                         <div class="project__third-image project__third-image-chat">
-                            <div class="layer active">
-
-                            </div>
+                            <div class="layer active"></div>
                             <p>Watch live site</p>
+                            <div class="pulse-layer">
+                                <div class="pulse"></div>
+                                <p>In development</p>
+                            </div>
                         </div>
+                        
                     </a>
                     <div class="project__third-details">
                         <div class="project__third-details-label">
                             <div>ReactJS</div>
-                            <div>Supabase</div>
-                            <div>Styled-Components</div>
+                            <div>ChakraUI</div>
                         </div>
                         <div class="project__third-details-title">
-                            <h3>Chat App</h3>
+                            <h3>Product Feedback App</h3>
                         </div>
                         <div class="project__third-details-links">
                             <a class="source-code" href="https://github.com/brunogleite/aluracord">See source code</a>
